#=======================================================================
#   Changelog :
#   20220604 v2.0.1: Neatly-Compressed. Improvements, bug fixing, readme changes
#   20220528 v2.0.0: Neatly-Compressed. Major re-design in logic and processing
#   20220503 v1.9.2: Neatly-Sorted. Improvements plus CreateDate evaluation changes
#   20220501 v1.9.1: Neatly-Compressed feature added
#   20220320 v1.8.3: Neatly-Sorted. Single source file mode added
#   20220221 v1.8.2: Subsecond string length and MODEL normalization
#   20220221 v1.8.1: Minor improvements in MODEL normalization
#   20220221 v1.8: Model feature is added to select MODEL position in the filename
#   20220220 v1.7.4: PNG file processing is added and MODEL character clean-up added
#   20220103 v1.7.3: source empty subfolder clean-up added
#   20220102 v1.7.2: EXIF extraction performance improvements
#   20220101 v1.7: crawl feature added to search for files in Source and its subfolders
#   20211229 v1.6: operations timing feature added for performance monitoring and debugging
#   20211225 v1.5: copy-move feature added, new "All" destination folder structure option added
#   20211221 v1.4: paths with whitespace and other special characters now supported
#   20211219 v1.3: "Unverified" (based on file system attributes) file duplication avoidance added
#   20211218 v1.2: added logging
#   20211211 v1.1: beta-version with option to select YEAR/MONTH/DAY or YEAR/MONTH or YEAR destination folder structure
#   20200816 v1.0: alpha-version of Minimal Viable Product with file duplication avoidance
#   20200723 v0.9: EXIF Model and File System ModifyTime extractions added
#   20200607 v0.5: EXIF SubSecCreateDate and CreateDate extractions added
#   20200520 v0.1: initial version with simple EXIF extraction
#=======================================================================